2008-12-19  Neal H. Walfield  <neal@gnu.org>

	* src/player.c (struct _Player): New fields volume, sink and
	bus_watch.
	(player_init): Set PL->VOLUME to -1.
	(playbin_ensure): Save the bus callback's identifier in
	PL->BUS_WATCH.  If PL->VOLUME >= 0, set PL->PLAYBIN's "volume"
	property.
	(playbin_recreate): New function.
	(player_set_source): Don't call playbin_ensure but
	playbin_recreate.
	(player_get_volume): Just return PL->VOLUME.
	(player_set_volume): Don't call playbin_ensure.  Save VOLUME in
	PL->VOLUME.  Only set the volume if PL->PLAYBIN is not NULL.

2008-12-19  Neal H. Walfield  <neal@gnu.org>

	* src/main.c (main): Call g_thread_init and gdk_threads_init.
	Surround gtk_main with a call to gdk_threads_enter and
	gdk_threads_leave.
	* src/musicdb.c (gdk_threads_enter): New weak declaration.
	(gdk_threads_leave): Likewise.
	(LOCK): New macro.
	(UNLOCK): Likewise.
	(music_db_init): Don't call g_thread_init here.
	(music_db_add): Use LOCK and UNLOCK when emitted signals.
	(music_db_set_info_internal): Likewise.
	(status_update): Likewise.
	(worker_thread): Likewise.

2008-12-19  Neal H. Walfield  <neal@gnu.org>

	* src/player.c: Include "config.h".
	(playbin_ensure): If we fail to create a playbin, display an error
	message to the user.

2008-12-08  Graham Cobb  <g+770@cobb.uk.net>

	* data/Makefile.am: Fix typo in icon filenames (bass... instead of base...)!

	* src/starling.c (starling_run): Change application name to GPE Audio player

	* debian/postinst: Add postinst script to rebuild hildon icon cache

	* hildon/gpe-todo.desktop.in.in (_Name): Change name to GPE Audio player

	* hildon/*.png: Add icons for 26x26, 40x40, 48x48 and 64x64.  
	Rename base.png to base-40x40.png

	* data/Makefile.am (nobase_icons_DATA): Create various icons for hildon

2008-11-27  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (worker_thread): When scanning files, don't add
	tracks with a 0 mtime to the meta data scanner queue.
