@@ -1,3 +1,14 @@
+2008-12-20  Neal H. Walfield  <neal@gnu.org>
+
+	* src/musicdb.h: Include <stdint.h>.
+	(MDB_SIZE): Define.
+	(struct music_db_info): Add field size.
+	* src/musicdb.c (struct info_cache_entry): Add field size.
+	(music_db_create_table): Create columns uid, md5 and size.
+	(music_db_get_info_internal): Set INFO->SIZE if appropriate.
+	(meta_data_reader): Save the track's size.
+	(worker_thread): Avoid scanning files multiple times.
+
 2008-12-19  Neal H. Walfield  <neal@gnu.org>
 
 	* src/player.c (struct _Player): New fields volume, sink and
